train test split and normalizing

--- a/iot-ids-research/configs/eda.yaml
+++ b/iot-ids-research/configs/eda.yaml
@@ -1,4 +1,4 @@
-input_file: data/processed/preprocessed.csv
+input_file: data/processed/sampled.csv
 label_col: Label
 output_dir: src/eda/results
 plots_dir: src/eda/results/plots
