--- a/iot-ids-research/configs/experiment_config.yaml
+++ b/iot-ids-research/configs/experiment_config.yaml
@@ -1,5 +1,5 @@
 algorithms:
-  n_runs: 3
+  n_runs: 1
   n_runs_full: 10
   random_state: 42
 data:
@@ -10,7 +10,7 @@ experiment:
   description: "Compara\xE7\xE3o de algoritmos de ML para detec\xE7\xE3o de anomalias\
     \ em IoT"
   name: baseline_comparison
-  test_mode: false
+  test_mode: true
   version: '1.0'
 mlflow:
   experiment_prefix: IoT-IDS-Baseline
