dvc to paralellize

--- a/iot-ids-research/dvc.yaml
+++ b/iot-ids-research/dvc.yaml
@@ -43,94 +43,10 @@ stages:
     - data/processed/binary/y_test_binary.npy
     - data/processed/binary/scaler.pkl
     - data/processed/binary/binary_metadata.json
-  # === EXPERIMENTOS INDIVIDUAIS - MODO TESTE ===
-  exp_test_isolation_forest:
-    cmd: python3 experiments/run_single_algorithm.py isolation_forest
-    deps:
-    - experiments/run_single_algorithm.py
-    - experiments/algorithm_comparison.py
-    - data/processed/binary/X_train_binary.npy
-    - data/processed/binary/X_test_binary.npy
-    - data/processed/binary/y_train_binary.npy
-    - data/processed/binary/y_test_binary.npy
-    - data/processed/binary/binary_metadata.json
-    outs:
-    - experiments/results_test/isolationforest/
-    - experiments/logs_test/IsolationForest/
-    
-  exp_test_one_class_svm:
-    cmd: python3 experiments/run_single_algorithm.py one_class_svm
-    deps:
-    - experiments/run_single_algorithm.py
-    - experiments/algorithm_comparison.py
-    - data/processed/binary/X_train_binary.npy
-    - data/processed/binary/X_test_binary.npy
-    - data/processed/binary/y_train_binary.npy
-    - data/processed/binary/y_test_binary.npy
-    - data/processed/binary/binary_metadata.json
-    outs:
-    - experiments/results_test/oneclasssvm/
-    - experiments/logs_test/OneClassSVM/
-    
-  exp_test_random_forest:
-    cmd: python3 experiments/run_single_algorithm.py random_forest
-    deps:
-    - experiments/run_single_algorithm.py
-    - experiments/algorithm_comparison.py
-    - data/processed/binary/X_train_binary.npy
-    - data/processed/binary/X_test_binary.npy
-    - data/processed/binary/y_train_binary.npy
-    - data/processed/binary/y_test_binary.npy
-    - data/processed/binary/binary_metadata.json
-    outs:
-    - experiments/results_test/randomforestclassifier/
-    - experiments/logs_test/RandomForestClassifier/
-    
-  exp_test_logistic_regression:
-    cmd: python3 experiments/run_single_algorithm.py logistic_regression
-    deps:
-    - experiments/run_single_algorithm.py
-    - experiments/algorithm_comparison.py
-    - data/processed/binary/X_train_binary.npy
-    - data/processed/binary/X_test_binary.npy
-    - data/processed/binary/y_train_binary.npy
-    - data/processed/binary/y_test_binary.npy
-    - data/processed/binary/binary_metadata.json
-    outs:
-    - experiments/results_test/logisticregression/
-    - experiments/logs_test/LogisticRegression/
 
-  exp_test_svc:
-    cmd: python3 experiments/run_single_algorithm.py svc
-    deps:
-    - experiments/run_single_algorithm.py
-    - experiments/algorithm_comparison.py
-    - data/processed/binary/X_train_binary.npy
-    - data/processed/binary/X_test_binary.npy
-    - data/processed/binary/y_train_binary.npy
-    - data/processed/binary/y_test_binary.npy
-    - data/processed/binary/binary_metadata.json
-    outs:
-    - experiments/results_test/svc/
-    - experiments/logs_test/SVC/
-    
-  # === CONSOLIDAÇÃO TESTE ===
-  consolidate_test_results:
-    cmd: python3 experiments/consolidate_results.py
-    deps:
-    - experiments/consolidate_results.py
-    - experiments/results_test/isolationforest/
-    - experiments/results_test/oneclasssvm/
-    - experiments/results_test/randomforestclassifier/
-    - experiments/results_test/logisticregression/
-    - experiments/results_test/svc/
-    outs:
-    - experiments/final_results_test/
-    - experiments/final_plots_test/
-    - experiments/final_tables_test/
-    - experiments/final_report_test/
-
-  # === EXPERIMENTOS INDIVIDUAIS - MODO COMPLETO ===
+  # === EXPERIMENTOS INDIVIDUAIS ===
+  # Os estágios se adaptam automaticamente ao TEST_MODE do algorithm_comparison.py
+  
   exp_isolation_forest:
     cmd: python3 experiments/run_single_algorithm.py isolation_forest
     deps:
@@ -142,7 +58,7 @@ stages:
     - data/processed/binary/y_test_binary.npy
     - data/processed/binary/binary_metadata.json
     outs:
-    - experiments/results/isolationforest/
+    - experiments/results/
     - experiments/logs/IsolationForest/
     
   exp_one_class_svm:
@@ -156,36 +72,8 @@ stages:
     - data/processed/binary/y_test_binary.npy
     - data/processed/binary/binary_metadata.json
     outs:
-    - experiments/results/oneclasssvm/
+    - experiments/results/
     - experiments/logs/OneClassSVM/
-    
-  exp_local_outlier_factor:
-    cmd: python3 experiments/run_single_algorithm.py local_outlier_factor
-    deps:
-    - experiments/run_single_algorithm.py
-    - experiments/algorithm_comparison.py
-    - data/processed/binary/X_train_binary.npy
-    - data/processed/binary/X_test_binary.npy
-    - data/processed/binary/y_train_binary.npy
-    - data/processed/binary/y_test_binary.npy
-    - data/processed/binary/binary_metadata.json
-    outs:
-    - experiments/results/localoutlierfactor/
-    - experiments/logs/LocalOutlierFactor/
-    
-  exp_elliptic_envelope:
-    cmd: python3 experiments/run_single_algorithm.py elliptic_envelope
-    deps:
-    - experiments/run_single_algorithm.py
-    - experiments/algorithm_comparison.py
-    - data/processed/binary/X_train_binary.npy
-    - data/processed/binary/X_test_binary.npy
-    - data/processed/binary/y_train_binary.npy
-    - data/processed/binary/y_test_binary.npy
-    - data/processed/binary/binary_metadata.json
-    outs:
-    - experiments/results/ellipticenvelope/
-    - experiments/logs/EllipticEnvelope/
     
   exp_random_forest:
     cmd: python3 experiments/run_single_algorithm.py random_forest
@@ -198,7 +86,7 @@ stages:
     - data/processed/binary/y_test_binary.npy
     - data/processed/binary/binary_metadata.json
     outs:
-    - experiments/results/randomforestclassifier/
+    - experiments/results/
     - experiments/logs/RandomForestClassifier/
     
   exp_logistic_regression:
@@ -212,11 +100,11 @@ stages:
     - data/processed/binary/y_test_binary.npy
     - data/processed/binary/binary_metadata.json
     outs:
-    - experiments/results/logisticregression/
+    - experiments/results/
     - experiments/logs/LogisticRegression/
-    
-  exp_gradient_boosting:
-    cmd: python3 experiments/run_single_algorithm.py gradient_boosting
+
+  exp_svc:
+    cmd: python3 experiments/run_single_algorithm.py svc
     deps:
     - experiments/run_single_algorithm.py
     - experiments/algorithm_comparison.py
@@ -226,21 +114,16 @@ stages:
     - data/processed/binary/y_test_binary.npy
     - data/processed/binary/binary_metadata.json
     outs:
-    - experiments/results/gradientboostingclassifier/
-    - experiments/logs/GradientBoostingClassifier/
-    
-  # === CONSOLIDAÇÃO FINAL ===
+    - experiments/results/
+    - experiments/logs/SVC/
+
+  # === CONSOLIDAÇÃO DE RESULTADOS ===
+  # Consolida os resultados de todos os algoritmos
   consolidate_results:
     cmd: python3 experiments/consolidate_results.py
     deps:
     - experiments/consolidate_results.py
-    - experiments/results/isolationforest/
-    - experiments/results/oneclasssvm/
-    - experiments/results/localoutlierfactor/
-    - experiments/results/ellipticenvelope/
-    - experiments/results/randomforestclassifier/
-    - experiments/results/logisticregression/
-    - experiments/results/gradientboostingclassifier/
+    - experiments/results/
     outs:
     - experiments/final_results/
     - experiments/final_plots/
