--- a/iot-ids-research/dvc.yaml
+++ b/iot-ids-research/dvc.yaml
@@ -54,6 +54,7 @@ stages:
     deps:
     - experiments/run_single_algorithm.py
     - experiments/algorithm_comparison.py
+    - experiments/individual_analysis.py
     - data/processed/binary/X_train_binary.npy
     - data/processed/binary/X_test_binary.npy
     - data/processed/binary/y_train_binary.npy
@@ -66,6 +67,7 @@ stages:
     deps:
     - experiments/run_single_algorithm.py
     - experiments/algorithm_comparison.py
+    - experiments/individual_analysis.py
     - data/processed/binary/X_train_binary.npy
     - data/processed/binary/X_test_binary.npy
     - data/processed/binary/y_train_binary.npy
@@ -78,6 +80,7 @@ stages:
     deps:
     - experiments/run_single_algorithm.py
     - experiments/algorithm_comparison.py
+    - experiments/individual_analysis.py
     - data/processed/binary/X_train_binary.npy
     - data/processed/binary/X_test_binary.npy
     - data/processed/binary/y_train_binary.npy
@@ -90,6 +93,7 @@ stages:
     deps:
     - experiments/run_single_algorithm.py
     - experiments/algorithm_comparison.py
+    - experiments/individual_analysis.py
     - data/processed/binary/X_train_binary.npy
     - data/processed/binary/X_test_binary.npy
     - data/processed/binary/y_train_binary.npy
@@ -102,6 +106,7 @@ stages:
     deps:
     - experiments/run_single_algorithm.py
     - experiments/algorithm_comparison.py
+    - experiments/individual_analysis.py
     - data/processed/binary/X_train_binary.npy
     - data/processed/binary/X_test_binary.npy
     - data/processed/binary/y_train_binary.npy
@@ -114,6 +119,7 @@ stages:
     deps:
     - experiments/run_single_algorithm.py
     - experiments/algorithm_comparison.py
+    - experiments/individual_analysis.py
     - data/processed/binary/X_train_binary.npy
     - data/processed/binary/X_test_binary.npy
     - data/processed/binary/y_train_binary.npy
@@ -126,6 +132,7 @@ stages:
     deps:
     - experiments/run_single_algorithm.py
     - experiments/algorithm_comparison.py
+    - experiments/individual_analysis.py
     - data/processed/binary/X_train_binary.npy
     - data/processed/binary/X_test_binary.npy
     - data/processed/binary/y_train_binary.npy
@@ -138,6 +145,7 @@ stages:
     deps:
     - experiments/run_single_algorithm.py
     - experiments/algorithm_comparison.py
+    - experiments/individual_analysis.py
     - data/processed/binary/X_train_binary.npy
     - data/processed/binary/X_test_binary.npy
     - data/processed/binary/y_train_binary.npy
@@ -150,6 +158,7 @@ stages:
     deps:
     - experiments/run_single_algorithm.py
     - experiments/algorithm_comparison.py
+    - experiments/individual_analysis.py
     - data/processed/binary/X_train_binary.npy
     - data/processed/binary/X_test_binary.npy
     - data/processed/binary/y_train_binary.npy
@@ -162,6 +171,7 @@ stages:
     deps:
     - experiments/run_single_algorithm.py
     - experiments/algorithm_comparison.py
+    - experiments/individual_analysis.py
     - data/processed/binary/X_train_binary.npy
     - data/processed/binary/X_test_binary.npy
     - data/processed/binary/y_train_binary.npy
